--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,8 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="theme_primary">#FF2E6E</color>
+    <color name="theme_primary_dark">#B20A3D</color>
+    <color name="theme_accent">#0BBE1F</color>
+    <color name="ltgray">#3A3B37</color>
 </resources>
